static/styles/ops_dark/style.css
/* ... */
#alerts,
#logo,
#menu,
#searchbars,
#userinfo {
    -webkit-box-flex: 0;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
    float: none;
    margin: 0;
    width: unset
}
#userinfo {
    cursor: default;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-flex: 0;
    -ms-flex: 0 1 100%;
    flex: 0 1 100%;
    font-size: 1em;
    height: 34px;
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-box-ordinal-group: 2;
    -ms-flex-order: 1;
    order: 1;
    padding: 0 5px;
    text-align: center;
    z-index: 10;
    background: 0e0f11;
    border-bottom: 1px solid #28292a;
    -webkit-box-shadow: 0 2px 4px 1px rgba(0, 0, 0, .2);
    box-shadow: 0 2px 4px 1px rgba(0, 0, 0, .2);
    color: #bbb
}
@media only screen and (max-width: 789px) {
    #userinfo {
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
        height: auto!important;
        padding: 0!important
    }
}
#userinfo_stats {
    -webkit-box-flex: 5;
    -ms-flex: 5 5 auto;
    flex: 5 5 auto;
    font-size: .95em;
    line-height: 34px;
    -webkit-box-ordinal-group: 3;
    -ms-flex-order: 2;
    order: 2;
    vertical-align: middle;
    width: 100%
}
#userinfo_major {
    -webkit-box-flex: 1;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    margin-left: 5px;
    -webkit-box-ordinal-group: 4;
    -ms-flex-order: 3;
    order: 3;
    white-space: nowrap
}
#userinfo_username {
    -webkit-box-flex: 1;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    -webkit-box-ordinal-group: 5;
    -ms-flex-order: 4;
    order: 4;
    padding: 0!important;
    text-align: right
}
#userinfo ul {
    padding: 0
}
#userinfo ul li {
    margin: 0;
    text-align: left
}
#userinfo a {
    color: #ccc
}
#userinfo_minor {
    background: transparent url(../assets/icons/drop-down-menu.svg) no-repeat left -22px center;
    background-size: 165px 24px!important;
    -webkit-box-flex: 0;
    -ms-flex: 0 0 123px;
    flex: 0 0 123px;
    height: 34px;
    margin-right: 60px;
    -webkit-box-ordinal-group: 1;
    -ms-flex-order: 0;
    order: 0;
    z-index: 1001
}
@media only screen and (max-width: 789px) {
    #userinfo_minor {
        background: transparent url(../assets/icons/drop-down-3.svg) no-repeat left 15px center!important;
        background-size: 25%!important;
        -webkit-box-flex: 0;
        -ms-flex: 0 0 25%;
        flex: 0 0 25%;
        height: unset;
        margin: 0!important;
        padding: 0!important;
        z-index: 31000
    }
}
#userinfo_minor:hover {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 183px;
    flex: 0 0 183px;
    margin-right: 0
}
@media only screen and (max-width: 789px) {
    #userinfo_minor:hover {
        background: transparent;
        margin-top: 0;
        min-width: 100%;
        position: fixed
    }
}
#userinfo_minor li {
    display: none;
    padding: 2px 4px;
    background-color: #0e0f11;
    border-left: 1px solid #333;
    border-right: 1px solid #333;
    -webkit-box-shadow: 0 2px 6px 2px rgba(0, 0, 0, .4);
    box-shadow: 0 2px 6px 2px rgba(0, 0, 0, .4)
}
#userinfo_minor li:first-of-type {
    margin-top: 34px
}
@media only screen and (max-width: 789px) {
    #userinfo_minor li:first-of-type {
        margin-top: 0
    }
}
#userinfo_minor:hover li {
    display: block
}
#userinfo_minor li:first-of-type {
    padding-top: 4px;
    border-top: 1px solid #333
}
#userinfo_minor li:last-of-type {
    padding-bottom: 4px;
    border-bottom: 1px solid #333
}
#userinfo_minor li a {
    background-position: right 5px center, 100% bottom;
    background-repeat: no-repeat, no-repeat;
    background-size: auto 20px, 200% 1px;
    display: block;
    padding: 6px 10px;
    -webkit-transition: all .2s linear;
    -o-transition: all .2s linear;
    transition: all .2s linear;
    z-index: 400;
    background-color: #0e0f11
}
#userinfo_minor:hover li:hover a {
    background-position: right 5px center, 0 bottom;
    text-decoration: none;
    color: #e35151
}
#nav_inbox a {
    background-image: url(../assets/icons/Header-Messages-read.svg), -webkit-gradient(linear, right top, left top, from(#252525), color-stop(50%, #252525), color-stop(50%, #e35151), to(#7f2d2d));
    background-image: url(../assets/icons/Header-Messages-read.svg), -webkit-linear-gradient(right, #252525, #252525 50%, #e35151 0, #7f2d2d);
    background-image: url(../assets/icons/Header-Messages-read.svg), -o-linear-gradient(right, #252525, #252525 50%, #e35151 50%, #7f2d2d);
    background-image: url(../assets/icons/Header-Messages-read.svg), linear-gradient(270deg, #252525, #252525 50%, #e35151 0, #7f2d2d)
}
#nav_staffinbox a {
    background-image: url(../assets/icons/Header-Staff-messages.svg), -webkit-gradient(linear, right top, left top, from(#252525), color-stop(50%, #252525), color-stop(50%, #e35151), to(#7f2d2d));
    background-image: url(../assets/icons/Header-Staff-messages.svg), -webkit-linear-gradient(right, #252525, #252525 50%, #e35151 0, #7f2d2d);
    background-image: url(../assets/icons/Header-Staff-messages.svg), -o-linear-gradient(right, #252525, #252525 50%, #e35151 50%, #7f2d2d);
    background-image: url(../assets/icons/Header-Staff-messages.svg), linear-gradient(270deg, #252525, #252525 50%, #e35151 0, #7f2d2d)
}
#nav_uploaded a {
    background-image: url(../assets/icons/Header-Uploads.svg), -webkit-gradient(linear, right top, left top, from(#252525), color-stop(50%, #252525), color-stop(50%, #e35151), to(#7f2d2d));
    background-image: url(../assets/icons/Header-Uploads.svg), -webkit-linear-gradient(right, #252525, #252525 50%, #e35151 0, #7f2d2d);
    background-image: url(../assets/icons/Header-Uploads.svg), -o-linear-gradient(right, #252525, #252525 50%, #e35151 50%, #7f2d2d);
    background-image: url(../assets/icons/Header-Uploads.svg), linear-gradient(270deg, #252525, #252525 50%, #e35151 0, #7f2d2d)
}
/* ... */

